теперь время выбирается через time_select

--- a/app/views/meeting_rooms/index.html.haml
+++ b/app/views/meeting_rooms/index.html.haml
@@ -12,7 +12,7 @@
       %tr
         %th=l(:field_name)
         %th=l(:field_capacity)
-        %th=l(:field_is_closed)      
+        %th=l(:field_meeting_room_is_closed)
         %th=l(:field_start_time)
         %th=l(:field_end_time)
         %th
