--- a/app/views/meeting_rooms/_form.html.haml
+++ b/app/views/meeting_rooms/_form.html.haml
@@ -4,6 +4,10 @@
   %p= f.text_field :name, :required => true, :size => 80
   %p= f.text_field :capacity, :required => true, :size => 10
   %p= f.check_box :is_closed, :label => t(:field_meeting_room_is_closed)
-  %p= f.text_field :start_time, :required => true, :size => 10
-  %p= f.text_field :end_time, :required => true, :size => 10  
+  %p
+    = f.label :start_time  
+    = f.time_select :start_time, :value => Time.now, :minute_step => 15
+  %p
+    = f.label :end_time  
+    = f.time_select :end_time, :value => Time.now, :minute_step => 15  
   
