--- a/app/views/meeting_room_reserves/new.html.haml
+++ b/app/views/meeting_room_reserves/new.html.haml
@@ -1,11 +1,11 @@
 %h2
   = link_to l(:label_meeting_room_reserve_plural), :action => :index
   &#187;
-  = l(:label_meeting_room_reserve_new)  
+  = l(:label_meeting_room_reserve_new)
   &#187;
   = h(@meeting_room_reserve.meeting_room.name)
 
-.issue.details  
+.issue.details
   %table.attributes
     %tr
       %th=l(:field_start_time)+":"
@@ -17,7 +17,7 @@
   - content_for :sidebar do
     = render :partial => 'list', :locals => {:meeting_room_id => @meeting_room_reserve.meeting_room_id}
 
-- labelled_form_for @meeting_room_reserve do |f|
+- form = labelled_form_for @meeting_room_reserve do |f|
   = render :partial => 'form', :locals => {:f => f}
   = submit_tag l(:button_create)
-
+= form if Rails::VERSION::MAJOR >= 3
