--- a/app/views/meeting_rooms/edit.html.haml
+++ b/app/views/meeting_rooms/edit.html.haml
@@ -1,9 +1,9 @@
 %h2
   = link_to l(:label_meeting_room_plural), meeting_rooms_path
-  &#187; 
+  &#187;
   =h @meeting_room.name
 
-- labelled_form_for @meeting_room do |f|
+- form = labelled_form_for @meeting_room do |f|
   = render :partial => 'form', :locals => {:f => f}
   = submit_tag l(:button_save)
-
+= form if Rails::VERSION::MAJOR >= 3
