--- a/app/views/meeting_rooms/new.html.haml
+++ b/app/views/meeting_rooms/new.html.haml
@@ -3,7 +3,7 @@
   &#187;
   =l(:label_meeting_room_new)
 
-- labelled_form_for @meeting_room do |f|
+- form = labelled_form_for @meeting_room do |f|
   = render :partial => 'form', :locals => {:f => f}
   = submit_tag l(:button_create)
-
+= form if Rails::VERSION::MAJOR >= 3
